bug: fix project card year/more vertical alignment - set big btn to btn-important class - use flex column for vertical alignment

--- a/style/hero.css
+++ b/style/hero.css
@@ -85,7 +85,7 @@
     transform-origin: left;
 }
 /* Button spacing */
-button.btn {
+button.btn-important {
     display: block;
     margin: 2rem auto;
 }
